--- a/styles.css
+++ b/styles.css
@@ -44,6 +44,13 @@ body {
 .nav-link:hover {
     color: #d4af37 !important;
 }
+.navbar-toggler {
+    border-color: #f5f5f5 !important;
+}
+.navbar-toggler-icon{
+    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba%28255, 255, 255, 1%29' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E");
+}
+
 /* Sección títulos */
 h2 {
     color: #1c1f26;
@@ -74,7 +81,14 @@ h2 {
   object-fit: contain;
 }
 
+.btn-primary {
+    background-color: #d4af37;
+    border: none;
+}
 
+.btn-primary:hover {
+    background-color: #806a22;
+}
 /* Footer */
 footer {
     background: #1c1f26;
